# vigilant-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
vigilant/: __init__.py  attributes.py  autocapture.py  config.py  context.py  events.py  instance.py  log_batcher.py  logger.py  logs.py  message.py  metric_batcher.py  metric_collector.py  metric_sender.py  metrics.py  passthrough.py  router.py  types.py  utils.py  vigilant.py
vigilant_sdk/: __init__.py  alerts.py  attributes.py  batcher.py  config.py  instance.py  logs.py  message.py  passthrough.py  router.py  types.py  utils.py  vigilant.py
vigilant_sdk/integrations/: __init__.py  fastapi.py
