[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-sdk"
version = "1.0.0"
description = "Python SDK for Vigilant (https://vigilant.run)"
authors = [
    { name = "Vigilant Team", email = "support@vigilant.run" },
]
urls = { Homepage = "https://vigilant.run" }
requires-python = ">=3.7"
dependencies = [
    "httpx>=0.25.0"
] 