[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-sdk"
version = "1.0.0"
description = "Python SDK for Vigilant (https://vigilant.run)"
authors = [
    { name = "Vigilant Team", email = "support@vigilant.run" },
]
urls = { Homepage = "https://vigilant.run" }
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0"
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.68.0"] 