[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-py"
version = "3.0.2"
description = "Python SDK for Vigilant (https://vigilant.run)"
requires-python = ">=3.7"
authors = [
  { name="Vigilant Team", email="support@vigilant.run" },
]
dependencies = [
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["F", "E", "I"]
exclude = [
    ".venv",
    "venv",
    ".ruff_cache",
    "build",
    "dist",
    ".git",
    "vigilant_py.egg-info",
]

[tool.ruff.format]
exclude = [
    ".venv",
    "venv",
    ".ruff_cache",
    "build",
    "dist",
    ".git",
    "vigilant_py.egg-info",
] 